[package]
name = "rust-cel-parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Broch Stilley <brochignton@gmail.com>"]
description = "A parser for the CEL language"
repository = "https://github.com/brochington/rust-cel-parser"
readme = "README.md"
categories = ["parser-implementations", "compilers"]
keywords = ["cel", "parser", "ast", "expression", "google"]


[dependencies]
pest = "2.8.1"
pest_derive = "2.8.1"
lazy_static = "1.5.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4.0"